Fixed build errors and reverted some applied transformations to fix build errors